fixed css and worked on alignment

--- a/wwr/styles/style_copy.css
+++ b/wwr/styles/style_copy.css
@@ -1,30 +1,11 @@
 header {
-background-color: #1c1d21ff;
+background-color : #1c1d21ff;
 display: grid;
 grid-template-columns: 150px auto;
 }
 nav {
 display: flex;
 justify-content: space-around;
-}
-nav a {
-margin : 0 auto;
-color : #d4ac0d;
-text-decoration : none;
-padding : 35px;
-text-align: center;
-}
-nav a:hover {
-background-color : #1c1d21ff;
-color : white;
-}
-.logo {
-width : 80px;
-}
-#logo_link {
-padding-top : 5px;
-justify-self: center;
-align-self: center;
 }
 #hero {
 display: grid;
@@ -35,6 +16,27 @@ margin-top: -100px;
 grid-column: 1/4;
 grid-row: 1/3;
 z-index: -1;
+}
+.home-title {
+font-family : 'Calibri', 'Consolas', 'Arial';
+font-size : 2em;
+margin-top : 10px;
+}
+#logo_link {
+padding-top : 5px;
+justify-self: center;
+align-self: center;
+}
+#content {
+max-width : 1600px;
+margin : 0 auto;
+}
+nav a {
+margin : 0 auto;
+color : #d4ac0d;
+text-decoration : none;
+padding : 35px;
+text-align: center;
 }
 #hero-msg {
 grid-column: 2/3;
@@ -48,10 +50,6 @@ color: whitesmoke;
 margin : 0 auto;
 text-align: center;
 }
-#content {
-max-width : 1600px;
-margin : 0 auto;
-}
 .card-img, .mountains {
 width: 100%;
 }
@@ -60,19 +58,16 @@ margin : 0 auto;
 text-align: center;
 padding: 0;
 }
-.home-grid {
-display: grid;
+main section {
 margin : 0 auto;
 text-align: center;
 }
-.home-grid img {
+main section img {
 box-sizing : border-box;
 }
 #background {
 height : 725px;
 background-color : #1c1d21ff;
-grid-column: 1/11;
-grid-row: 4/9;
 }
 body {
 background-color : #1c1d21ff;
@@ -104,18 +99,6 @@ background-color : #1c1d21ff;
 .rivers-card, .camping-card, .rapids-card {
 margin : 200px 0;
 color : whitesmoke;
-}
-.rivers-card {
-grid-column: 2/4;
-grid-row: 2/3;
-}
-.camping-card {
-grid-column: 5/7;
-grid-row: 2/3;
-}
-.rapids-card {
-grid-column: 8/10;
-grid-row: 2/3;
 }
 .book:hover, .join:hover {
 background-color : #d4ac0d;
@@ -161,10 +144,6 @@ color : #d4ac0d;
 h4 {
 color : white;
 }
-.msg {
-grid-column: 6/10;
-grid-row: 6/7;
-}
 .msg h2 {
 color : whitesmoke;
 }
@@ -185,6 +164,9 @@ text-decoration : none;
 }
 footer a:hover {
 color : #d4ac0d;
+}
+.logo {
+width : 80px;
 }
 .icon {
 width : 80px;
